Fixed ribbon crowding problem on smaller screens

--- a/src/styles/ribbon.css
+++ b/src/styles/ribbon.css
@@ -3,26 +3,25 @@
   text-align: left;
   font-weight: bold;
   padding-left: 1%;
-  height: 5vh;
 }
 
 .site-title {
   font-size: 60%;
   color: white;
   text-decoration: none;
-  vertical-align: center;
 }
 
 .button-box {
   float: right;
   width: 15%;
+  min-width: 100px;
+  vertical-align: middle;
 }
 
 .story-button {
   border: transparent;
   text-decoration: none;
   text-align: center;
-  vertical-align: center;
   background-color: transparent;
   color: white;
   font-size: 50%;
